# bluesky

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  Makefile.dev  README  SConstruct  SConstruct.deprecated  blue-sky-re-nopy.vcxproj  blue-sky-re-nopy.vcxproj.filters  blue-sky-re.sln  blue-sky-re.vcxproj  blue-sky-re.vcxproj.filters  blue_sky.conf  bs_config  bs_config.win  bs_script_clean.sh  bs_script_clean_and_make_sh  bs_script_configure_and_make.sh  bs_script_make.sh  configure.ac  scons_env.custom.bs-eagle  scons_env.custom.example  scons_platform.lin-gcc  scons_platform.win-vs  scons_tools
client/src/: Makefile.am  Makefile.in  main_client.cpp
kernel/: CMakeLists.txt  SConscript  blue-sky.cbp  blue-sky.sln  blue-sky.vcproj  blue-sky.vcxproj  blue-sky.vcxproj.filters
kernel/include/: aligned_allocator.h  allocator_interface.h  array_ext.h  bs_abstract_storage.h  bs_array.h  bs_array_serialize.h  bs_array_shared.h  bs_arrbase.h  bs_assert.h  bs_command.h  bs_common.h  bs_config_parser.h  bs_conversion.h  bs_exception.h  bs_fwd.h  bs_imessaging.h  bs_kernel.h  bs_kernel_tools.h  bs_link.h  bs_log_scribers.h  bs_log_stream.h  bs_map.h  bs_messaging.h  bs_misc.h  bs_object_base.h  bs_object_base_macro.h  bs_plugin_common.h  bs_prop_base.h  bs_refcounter.h  bs_report.h  bs_report_thread.h  bs_serialize.h  bs_serialize_decl.h  bs_serialize_fix.h  bs_serialize_fixcont.h  bs_serialize_fixdata.h  bs_serialize_fixreal.h  bs_serialize_fixstr.h  bs_serialize_macro.h  bs_serialize_overl.h  (+26 more)
kernel/include/bs/: actor_common.h  any_array.h  assert.h  atoms.h  bs.h  common.h  defaults.h  error.h  errors.h  exception.h  force_plugin_import.h  fwd.h  kernel.h  kernel_errors.h  kernel_tools.h  link.h  log.h  meta.h  misc.h  node.h  objbase.h  objbase_macro.h  plugin_common.h  plugin_descriptor.h  propdict.h  property.h  setup_common_api.h  setup_plugin_api.h  stop_plugin_import.h  throw_exception.h  timetypes.h  transaction.h  tree.h  type_assign.h  type_caf_id.h  type_descriptor.h  type_info.h  type_macro.h  uuid.h
kernel/include/bs/compat/: array.h  array_eigen_traits.h  array_serialize.h  arrbase.h  arrbase_shared.h  bs_array.h  bs_arrbase.h  bs_vecbase.h  imessaging.h  messaging.h  serialize.h  vecbase.h  vecbase_shared.h
kernel/include/bs/detail/: apply.h  args.h  async_api_mixin.h  enumops.h  function_view.h  invoke.h  is_container.h  kernel_errors.h  lib_descriptor.h  object_ptr.h  part.h  scope_guard.h  sharded_mutex.h  spinlock.h  str_utils.h  tensor_meta.h  tree_errors.h  tuple_utils.h  typestring.h
kernel/include/python/: bs_nparray.h  bs_npvec.h  bs_npvec_serialize.h  bs_npvec_shared.h  py_array_converter.h  py_bs_abstract_storage.h  py_bs_assert.h  py_bs_command.h  py_bs_converter.h  py_bs_iterator.h  py_bs_kernel.h  py_bs_link.h  py_bs_log.h  py_bs_messaging.h  py_bs_object_base.h  py_bs_shell.h  py_bs_tree.h  py_list_converter.h  py_object_handler.h  py_pair_converter.h  py_smart_ptr.h  py_string_converter.h
kernel/src/: Makefile.am  assert.cpp  backtrace_tools_unix.h  backtrace_tools_win.h  bs_abstract_storage.cpp  bs_array.cpp  bs_array_serialize.cpp  bs_arrbase.cpp  bs_assert.cpp  bs_command.cpp  bs_command.h  bs_common.cpp  bs_conf_reader.cpp  bs_conf_reader.h  bs_config_parser.cpp  bs_exception.cpp  bs_fwd.h  bs_imessaging.h  bs_kernel.cpp  bs_kernel_ston.cpp  bs_kernel_tools.cpp  bs_link.cpp  bs_link.h  bs_log_scribers.cpp  bs_macro_private.h  bs_messaging.cpp  bs_misc.cpp  bs_named_type.h  bs_object_base.cpp  bs_object_base.h  bs_obsolete.h  bs_plugin_common.h  bs_prop_base.cpp  bs_report.cpp  bs_report.h  bs_serialize.cpp  bs_shell.cpp  bs_shell.h  bs_tree.cpp  bs_type_info.cpp  (+56 more)
kernel/src/compat/: array.cpp  array_serialize.cpp  bs_array.cpp  messaging.cpp
kernel/src/kernel/: backtrace_tools_unix.h  backtrace_tools_win.h  config.cpp  config_subsyst.cpp  config_subsyst.h  errors.cpp  instance_subsyst.cpp  instance_subsyst.h  kimpl.cpp  kimpl.h  logging_subsyst.cpp  logging_subsyst.h  misc.cpp  plugins.cpp  plugins_discover.cpp  plugins_subsyst.cpp  plugins_subsyst.h  python_subsyst.cpp  python_subsyst.h  python_subsyst_impl.h  radio.cpp  radio_queue.cpp  radio_subsyst.cpp  radio_subsyst.h  tools.cpp  types_factory.cpp  types_factory_subsyst.cpp
kernel/src/python/: bs_import_common.cpp  bs_import_common.h  bs_nparray.cpp  bs_npvec.cpp  bs_npvec_shared.cpp  bs_python_import.cpp  kernel_queue.h  print_python_exception.h  py_anyobject.cpp  py_array.cpp  py_bs_abstract_storage.cpp  py_bs_array.cpp  py_bs_assert.cpp  py_bs_command.cpp  py_bs_exports.h  py_bs_kernel.cpp  py_bs_link.cpp  py_bs_log.cpp  py_bs_messaging.cpp  py_bs_messaging.h  py_bs_object_base.cpp  py_bs_shell.cpp  py_bs_tree.cpp  py_bs_typed.cpp  py_common.cpp  py_error.cpp  py_kernel.cpp  py_link.cpp  py_log.cpp  py_main.cpp  py_messaging.cpp  py_misc.cpp  py_node.cpp  py_objbase.cpp  py_object_base.cpp  py_tree.cpp
kernel/src/serialize/: array.cpp  base_types.cpp  link.cpp  node.cpp  object_formatter.cpp  objfrm_manager.cpp  python.cpp  tree.cpp  tree_fs_impl.h  tree_fs_input.cpp  tree_fs_output.cpp  tree_impl.h
kernel/src/tree/: actor_common.h  actor_debug.h  bare_link.cpp  bare_node.cpp  context.cpp  deep_search_impl.h  engine.cpp  engine_actor.h  engine_impl.cpp  engine_impl.h  errors.cpp  ev_listener_actor.h  fusion_link.cpp  fusion_link_actor.cpp  fusion_link_actor.h  fusion_link_impl.h  hard_link.cpp  hard_link.h  inode.cpp  link.cpp  link_ack_behavior.cpp  link_actor.cpp  link_actor.h  link_actor_data.cpp  link_events.cpp  link_impl.cpp  link_impl.h  link_invoke.h  map_base_impl.cpp  map_engine.h  map_link.cpp  map_link_actor.cpp  map_link_impl.cpp  map_node_impl.cpp  nil_engine.h  nil_engine_impl.h  nil_link.cpp  nil_link.h  nil_node.cpp  node.cpp  (+17 more)
plugins/bs_cube/src/: Makefile.am  bs_cube.cpp  bs_cube.h  bs_cube_t.cpp  bs_cube_t.h  bs_matcube.cpp  bs_matcube.h  main.cpp
python/bspy_loader/: CMakeLists.txt  SConscript  bspy_loader.cbp  bspy_loader.vcproj  bspy_loader.vcxproj  bspy_loader.vcxproj.filters
python/bspy_loader/src/: Makefile.am  main.cpp
(+206 files in other folders)
